2.4.6
-----
1. Don't add sort field when adding an album to queue after navigating to album
   list via artist.
2. Fix navigating back to now-playing if click on browse link in now-playing
   info using mobile layout.

2.4.5
-----
1. Try to remove hanging 'Click' on server update message - this is with older
   versions of LMS.
2. When showing update/restart dialog due to status message, only go to link
   if 'Download'/'Restart' button is clicked, just close dialog on 'Cancel'
3. Add click handler to close server/player settings menus when clicking within
   iframe.
4. If status message is all in 'a' elem, then use its text.
5. Remove extra padding above settings selector in server/player settings on
   desktop.
6. Close iframe on 'esc' - depending upon which input has focus.
7. Allow to add a track to (and remove from) favourites via now-playing
   context menu.

2.4.4
-----
1. If statusarea message is rescan or restart then show in dialog.
2. Use innerText to get statusarea text to show.
3. Minor tweak to players list in 'Information' dialog.
4. Fix scrolling entry field into view when using desktop layout on mobile
   devices.
5. Treat all biographies, and album reviews, as HTML to preserve formatting.

2.4.3
-----
1. Show server/player settings 'statusarea' messages in a toast.
2. Set max-width of toolbar title when showing clock.
3. Slightly adjust clock position.
4. Add $TRACKNUM and $DISC to custom actions.
5. Add icon mapping for Zen Radio.
6. Tweak textarea borders in setings dialogs.
7. Add settings/index.html allowing to choose between player or server settings.
8. Fix changing languages.

2.4.2
-----
 1. If volume adjusted via javascript (e.g. from Material APK) then have volume
    dialogs update.
 2. Show fixed volume players (even if set to hide) as disabled in group volume
    dialog.
 3. If current player is no longer synced then close group volume dialog.
 4. Add support for Group players' 'Always synchronize all members' option.